# teste

./: Cargo.toml
crates/ruff_python_ast/src/: nodes.rs
crates/ruff_python_parser/: Cargo.toml
crates/ruff_python_parser/src/: function.rs  invalid.rs  lexer.rs  lib.rs  parser.rs  python.rs  soft_keywords.rs  string.rs
crates/ruff_python_parser/src/parser2/: helpers.rs  mod.rs  tests.rs
